# meshtaichi_patcher

./: .gitignore  CMakeLists.txt  README.md  build.py  build_m1.py  build_win.bat  pyproject.toml  readme.md  readme.txt  requirements.txt  setup.py
.github/workflows/: conda.yml  wheels.yml
conda.recipe/: meta.yaml
example/: armadillo.py  cache.py  patcher_stats.py  pybind_test.py  ribbon.py  spring.py  test.py  timing.py  until_fail.py
example/mass_spring/: README.md  run.py
example/projective_dynamics/: README.md  run.py
example/xpbd_cloth/: README.md  render.py  run.py  solver.py
meshtaichi_patcher/: __init__.py  cluster.py  mesh.py  meshpatcher.py  relation.py
src/: api.cpp  cluster.cpp  cluster.h  csr.cpp  csr.h  main.cpp  mesh.cpp  patcher.cpp  patcher.h  patcher_api.h  patcher_mesh.h  patcher_old.cpp
