[project]
name = "meshtaichi_patcher"
version = "0.0.14"
authors = [
  { name="BillXu2000", email="BillXu2000@126.com" },
]
dependencies = ["meshio", "numpy"]
description = "a mesh patcher for meshtaichi"
readme = "readme.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/BillXu2000/meshtaichi_patcher"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
